--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="">HOme</a></li>
+                <li><a href="">Home</a></li>
                 <li><a href="">Body</a></li>
                 <li><a href="">You</a></li>
             </ul>
